--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,179 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+body {
+  background-color: white;
+}
+.title h1 {
+  color: #3a3a3a;
+  text-align: center;
+  margin: 30px 0;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+form {
+  display: flex;
+  width: 47%;
+  margin: 0 auto;
+  background: #e3e9ff;
+  padding: 10px 20px;
+  margin-top: 50px;
+  border-radius: 5px;
+  box-shadow: 1px 2px 10px #ddd;
+}
+form h3 {
+  text-align: center;
+}
+form input {
+  width: 105%;
+  flex: 4;
+  padding: 10px 5px;
+  outline: none;
+  background-color: #e3e9ff;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+.input_container {
+  margin:auto;
+  flex: 4;
+}
+
+.btn_container {
+  flex: 1;
+  text-align: right;
+  
+}
+.btn_container button {
+  background: #4913de;
   color: white;
+  padding: 10px 20px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.todo_container {
+  width: 50%;
+  margin: 0 auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.todo {
+  margin-top: 20px;
+  background: #e3e9ff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 1px 2px 10px #ddd;
+}
+.todo input {
+  cursor: pointer;
+  width: 50%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 28px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+.button-complete,
+.button-delete,
+.button-edit,
+.button-pin,
+.disabled {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: transparent;
+  border-radius: 50%;
+}
+#i {
+  font-size: 30px;
+  font-weight: 800;
+}
+.button-complete {
+  color: #4913de;
+  margin-right: 10px;
+}
+.button-edit {
+  color: #4913de;
+  margin-right: 10px;
+}
+.button-pin {
+  color: gray;
+  margin-right: 10px;
+}
+.disabled{
+  color: #8a8a8a;
+  margin-right: 10px;
+}
+.button-delete {
+  color: rgb(255, 122, 98);
+}
+@media screen and (max-width: 667px) {
+  .task_container {
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+  .task {
+    margin-right: 0px;
+  }
+}
+input:focus,
+button:focus {
+  outline: none;
+}
+.loader_container{
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:rgba(33, 68, 139, 0.5) ;
+  z-index: 20;
+
+}
+
+.loading {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.loading div {
+  position: absolute;
+  background: #4913de;
+  opacity: 1;
+  border-radius: 50%;
+  animation: loading 1.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.loading div:nth-child(2) {
+  animation-delay: -.7s;
+}
+
+@keyframes loading {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
   }
 }
